--- a/client/package.json
+++ b/client/package.json
@@ -23,14 +23,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+    "test": "react-scripts test"
   },
   "browserslist": {
     "production": [
@@ -45,12 +38,8 @@
     ]
   },
   "devDependencies": {
-    "@eslint/js": "^9.24.0",
-    "eslint": "^9.24.0",
-    "eslint-plugin-react": "^7.37.5",
     "globals": "^16.0.0",
-    "typescript": "^5.8.3",
-    "typescript-eslint": "^8.29.0"
+    "typescript": "^4.9.5"
   },
   "overrides": {
     "postcss": "^8.4.31",
